# index.js
@@ -1,36 +1,8 @@
-const express = require('express');
-const bodyParser = require('body-parser');
-const mysql = require('mysql2');
-//const cors = require('@koa/cors');
-const app = express();
+const app = require('./app');
 const db = require('./models');
 const Role = db.roles;
-const PORT = 3030;
 
-
-//Routes 
-const mainRoutes = require('./routes/mainRoutes')
-const applications = require('./routes/applications');
-const users = require('./routes/users');
-const auth = require('./routes/auth');
-
-
-app.use(express.json());
-app.use(bodyParser());
-app.use(bodyParser.json({limit: "30mb", extended: true  }));
-app.use(bodyParser.urlencoded({limit: "30mb", extended: true}));
-app.set('port', process.env.PORT || 3030);
-//app.use(cors());
-
-
-//Uses the routes
-app.use('/', mainRoutes)
-app.use('/applications', applications);
-app.use('/users', users)
-app.use('/auth', auth)
-
-
-
+let PORT = process.env.PORT || 3030;
 
 //Creates module but if module already exists, doesn't overwrite it
 db.sequelize.sync()
@@ -60,5 +32,3 @@ db.sequelize
   .catch(err => {
     console.error('Unable to connect to the database:', err);
   });
-
-
