# schemas/openapi.yaml
@@ -16,7 +16,7 @@ servers:
 tags:
   - name: Users
     description: Users that use APi.
-  - name: Applications.
+  - name: Applications
     description: Users can fill applications for trading license.
 
 paths:
@@ -119,7 +119,6 @@ paths:
           description: Only admin users can delete accounts
         '404':
           description: Not found
-					
   /applications:
     summary: Represents an individual application
     description: >
@@ -218,5 +217,4 @@ paths:
         '401':
           description: Only admin users can delete applications
         '404':
-          description: Not found
-			
+          description: Not found			
